[package]
name = "windows-run-as-system"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"

[dependencies.windows]
features = [
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_SystemServices",
]
version = "0.61.1"
